java/lang/management/ThreadMXBean/ThreadUserTime.java fails intermittently

XMLWordPrintable

        TESTFAIL:java/lang/management/ThreadMXBean/ThreadUserTime.java

        java/lang/management/ThreadMXBean/ThreadUserTime.java fails intermittently

        ----------System.out:(53/2671)----------
        SameVMThread Current Thread User Time = 0 user time = 0
        MyThread-0 Previous User Time = 0 Current User time = 0
        MyThread-1 Previous User Time = 0 Current User time = 0
        MyThread-2 Previous User Time = 0 Current User time = 0
        MyThread-3 Previous User Time = 0 Current User time = 0
        MyThread-4 Previous User Time = 10000000 Current User time = 10000000
        MyThread-5 Previous User Time = 10000000 Current User time = 10000000
        MyThread-6 Previous User Time = 0 Current User time = 0
        MyThread-7 Previous User Time = 0 Current User time = 0
        MyThread-8 Previous User Time = -20815565409551616 Current User time = -20815565409551616
        MyThread-9 Previous User Time = 10000000 Current User time = 10000000
        MyThread-0:
        CurrentThreadUserTime = 0 ThreadUserTime = 0
        CurrentThreadCpuTime = 7317985 ThreadCpuTime = 7491191
        MyThread-1:
        CurrentThreadUserTime = 10000000 ThreadUserTime = 10000000
        CurrentThreadCpuTime = 19258012 ThreadCpuTime = 19307574
        MyThread-2:
        CurrentThreadUserTime = 10000000 ThreadUserTime = 10000000
        CurrentThreadCpuTime = 20366859 ThreadCpuTime = 20425994
        MyThread-3:
        CurrentThreadUserTime = 20000000 ThreadUserTime = 20000000
        CurrentThreadCpuTime = 23594816 ThreadCpuTime = 23663884
        MyThread-4:
        CurrentThreadUserTime = 20000000 ThreadUserTime = 20000000
        CurrentThreadCpuTime = 25554057 ThreadCpuTime = 25603976
        MyThread-5:
        CurrentThreadUserTime = 20000000 ThreadUserTime = 20000000
        CurrentThreadCpuTime = 25753332 ThreadCpuTime = 25819353
        MyThread-6:
        CurrentThreadUserTime = 20000000 ThreadUserTime = 20000000
        CurrentThreadCpuTime = 25846132 ThreadCpuTime = 25906812
        MyThread-9:
        CurrentThreadUserTime = 20000000 ThreadUserTime = 20000000
        CurrentThreadCpuTime = 26419116 ThreadCpuTime = 26479922
        MyThread-7:
        CurrentThreadUserTime = 0 ThreadUserTime = -2324056628959551616
        CurrentThreadCpuTime = 6460347 ThreadCpuTime = 6510133
        Unexpected exception is thrown.
        java.lang.InterruptedException
        at java.lang.Object.wait(Native Method)
        at java.lang.Thread.join(Thread.java:1244)
        at java.lang.Thread.join(Thread.java:1318)
        at ThreadUserTime.main(ThreadUserTime.java:142)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:483)
        at com.sun.javatest.regtest.MainAction$SameVMRunnable.run(MainAction.java:746)
        at java.lang.Thread.run(Thread.java:744)
        MyThread-8:
        CurrentThreadUserTime = -20815565399551616 ThreadUserTime = -20815565399551616
        CurrentThreadCpuTime = -18014398487081406 ThreadCpuTime = -18014398486995353
        ----------System.err:(12/606)----------
        java.lang.RuntimeException: TEST FAILED
        at ThreadUserTime.main(ThreadUserTime.java:151)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:483)
        at com.sun.javatest.regtest.MainAction$SameVMRunnable.run(MainAction.java:746)
        at java.lang.Thread.run(Thread.java:744)

        JavaTest Message: Test threw exception: java.lang.RuntimeException
        JavaTest Message: shutting down test

        result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: TEST FAILED

              Assignee:
              Staffan Larsen (Inactive)
              Reporter:
              Amy Lu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: