8031126: java/lang/management/ThreadMXBean/ThreadUserTime.java fails intermittently

Reviewed-by: coleenp, simonis, goetz, gthornbr